--- a/web/player.html
+++ b/web/player.html
@@ -6,14 +6,10 @@
 </head>
 <!--script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script-->
 <script type="text/javascript" src="/js/socket.io.min.js"></script>
-
 <script type="text/javascript" src="/js/common_socketio.js"></script>
 <script type="text/javascript" src="/js/common_data_structures.js"></script>
+<script type="text/javascript" src="/js/common_functions.js"></script>
 <script type="text/javascript" src="/js/jumpdrive_player.js"></script>
-
-<script type="text/javascript" charset="utf-8">
-
-</script>
 
 <body class="body_blue">
 <div class="header text_blue"> Skokový pohon </div>
