--- a/web/admin.html
+++ b/web/admin.html
@@ -3,9 +3,11 @@
 <head>
 </head>
 
+<!--script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script-->
 <script type="text/javascript" src="/js/socket.io.min.js"></script>
 <script type="text/javascript" src="/js/common_socketio.js"></script>
 <script type="text/javascript" src="/js/common_data_structures.js"></script>
+<script type="text/javascript" src="/js/common_functions.js"></script>
 <script type="text/javascript" src="/js/jumpdrive_admin.js"></script>
 
 <body class="" >
